# fmu_test

./: .gitignore  CLAUDE.md  requirements.txt  run_fmu_pack.py  untitled.slx
doc/: FMU和打包设计.md  设计_fmu-pack.md
fmus/rc_lowpass/: CMakeLists.txt  README.md  fmu.yaml
fmus/rc_lowpass/include/: fmi2_router.h  user_model.h
fmus/rc_lowpass/src/: fmi2_adapter.c  user_model.c
fmus/rc_lowpass/test/: my_fmu_test.py  param_change_test.py  test_user_model.py
fmus/zermq_pub_recv/: CMakeLists.txt  README.md  fmu.yaml
fmus/zermq_pub_recv/include/: user_model.h
fmus/zermq_pub_recv/src/: fmi2_adapter.c  user_model.c
fmus/zermq_pub_recv/test/: my_fmu_test.py
fmus/zeromq_io/: CMakeLists.txt  README.md
fmus/zeromq_io/include/: user_model.h
fmus/zeromq_io/src/: user_model.c
fmus/zeromq_io/test/: README.md  mock_publisher.py  mock_subscriber.py  test_fmu_direct.c  test_standalone.c  test_user_model.py
fmus/zeromq_sub/: CMakeLists.txt  README.md  fmu.yaml
fmus/zeromq_sub/include/: fmi2_router.h  user_model.h
fmus/zeromq_sub/src/: fmi2_adapter.c  user_model.c
fmus/zeromq_sub/test/: my_fmu_test.py
tools/fmu_pack/: __init__.py  adapter_gen.py  builder.py  cli.py  config.py  header_parser.py  packager.py  readme_gen.py  router_gen.py  validator.py  xml_gen.py
tools/fmu_pack/templates/: README.md.j2  fmi2_adapter.c.j2  fmi2_router.h.j2  my_fmu_test.py.j2  test_user_model.py.j2
